--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Naval tactics'
 - !lcc 'V'
 - !lcsh 'Great Britain. Royal Navy -- Regulations'
+- GITenberg
 title: "Fighting Instructions, 1530-1816\r\nPublications of the Navy Records Society\
   \ Vol. XXIX."
 url: http://www.gutenberg.org/ebooks/16695
